--- a/src/Style/HomePage.module.css
+++ b/src/Style/HomePage.module.css
@@ -1,42 +1,49 @@
 .container {
-    width: 35%;
-    margin: auto;
+  width: 35%;
+  margin: auto;
 }
 
 .nav {
-    display: flex;
-    background-color: rgb(72,128,153);
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  background-color: rgb(72, 128, 153);
+  justify-content: space-between;
+  align-items: center;
 }
 
 .icons {
-    display: flex;
-    gap: 10px;
-    margin: 10px;
-    color: #fff;
+  display: flex;
+  gap: 10px;
+  margin: 10px;
+  color: #fff;
 }
 
 .heroSection {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 150px;
-    background-color:rgb(134, 182, 205);
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 190px;
+  background-color: rgb(134, 182, 205);
+  position: relative;
+  align-items: center;
+}
+
+.heroSection img {
+  width: 100%;
 }
 
 .heroSectionText {
-    margin: 50px;
-    font-size: 25px;
-    font-weight: 900;
-    font-family: 'Roboto Slab', serif;
-    text-align: left;
-    color: #fff;
+  font-size: 25px;
+  font-weight: 900;
+  font-family: 'Roboto Slab', serif;
+  color: #fff;
+  position: absolute;
+  top: 40%;
+  left: 50%;
 }
 
 .ptag {
-    font-size: 15px;
-    font-weight: normal;
-    color: #fff;
+  font-size: 15px;
+  font-weight: normal;
+  color: #fff;
 }
