--- a/src/Style/DisplayHomeItems.module.css
+++ b/src/Style/DisplayHomeItems.module.css
@@ -11,7 +11,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(134, 182, 205);
+  background-color: rgb(42, 105, 134);
 }
 
 .itemContainer:nth-child(4n+2),
@@ -22,9 +22,85 @@
 input {
   width: 98%;
   height: 30px;
+  background-color:rgb(2, 59, 85);
+  outline: none;
+  border: 3px solid rgb(2, 59, 85);
+  color: #fff;
+  font-family: 'Roboto Slab', serif;
+  font-size: 12px;
+}
+
+input:focus {
+  background-color: rgb(2, 59, 85);
+  color: #fff;
+  outline: none;
+  border: 3px solid rgb(2, 59, 85);
 }
 
 .img {
   width: 100px;
   height: 100px;
+  filter: grayscale(100%);
+  transition: filter 0.5s;
 }
+
+.img:hover {
+  filter: none;
+  cursor: pointer;
+}
+
+
+.items {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.arrowRight {
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.itemText {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 0px 10px 130px;
+}
+
+.coinName {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: 'Roboto Slab', serif;
+  color: gold;
+}
+
+.coinPrice {
+  font-size: 15px;
+  font-weight: 800;
+  font-family: 'Roboto Slab', serif;
+  color: #fff;
+}
+
+.priceLess {
+  width: auto;
+  padding: 5px;
+  border-radius: 2px;
+  font-size: 12px;
+  background-color: #f5866d;
+  color: #000;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.priceMore {
+  width: auto;
+  padding: 5px;
+  border-radius: 2px;
+  font-size: 12px;
+  background-color: #90ee90;
+  color: #000;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
