Add tests for my components

--- a/src/Style/DisplayHomeItems.module.css
+++ b/src/Style/DisplayHomeItems.module.css
@@ -22,7 +22,7 @@
 input {
   width: 98%;
   height: 30px;
-  background-color:rgb(2, 59, 85);
+  background-color: rgb(2, 59, 85);
   outline: none;
   border: 3px solid rgb(2, 59, 85);
   color: #fff;
@@ -49,7 +49,6 @@ input:focus {
   cursor: pointer;
 }
 
-
 .items {
   display: flex;
   justify-content: space-between;
@@ -65,7 +64,7 @@ input:focus {
 .itemText {
   display: flex;
   flex-direction: column;
-  margin: 0px 0px 10px 130px;
+  margin: 0 0 10px 130px;
 }
 
 .coinName {
@@ -103,4 +102,3 @@ input:focus {
   margin-top: 5px;
   margin-right: 5px;
 }
-
