Update the css files

--- a/src/Style/DetailsPage.module.css
+++ b/src/Style/DetailsPage.module.css
@@ -104,3 +104,10 @@ tr td:last-child {
   cursor: pointer;
   color: #fff;
 }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    margin: 0px;
+  }
+}
