--- a/src/Style/DisplayHomeItems.module.css
+++ b/src/Style/DisplayHomeItems.module.css
@@ -102,3 +102,10 @@ input:focus {
   margin-top: 5px;
   margin-right: 5px;
 }
+
+@media (max-width: 768px) {
+  input {
+    width: 100%;
+    height: 30px;
+}
+}
